@@ -5,7 +5,7 @@ import static no.sikt.graphitron.jooq.generated.testdata.pg_catalog.Tables.*;
 
 import fake.graphql.example.model.CustomerTable;
 import java.util.List;
-import java.util.stream.Collectors;
+
 import no.sikt.graphitron.codereferences.dummyreferences.DummyRecord;
 import no.sikt.graphql.helpers.selection.SelectionSet;
 import org.jooq.DSLContext;
@@ -45,7 +45,7 @@ public class QueryDBQueries {
                                                         DSL.inline(internal_it_.getFirst()),
                                                         no.sikt.graphitron.codereferences.conditions.RecordCustomerCondition.customerString(_customer, internal_it_.getFirst())
                                                 )
-                                        ).collect(Collectors.toList())
+                                        ).toList()
                                 ) : DSL.noCondition()
                 )
                 .and(no.sikt.graphitron.codereferences.conditions.RecordCustomerCondition.customerJavaRecordList(_customer, inRecordList))
